style and others

--- a/src/main/resources/templates/addbook.html
+++ b/src/main/resources/templates/addbook.html
@@ -7,7 +7,11 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 </head>
 <body>
+
 <h1 style="align-content: center">  Add book </h1>
+
+
+</div>
 <div style="margin: 100px; align-content: center; " >
     <form th:object="${book}" th:action="@{save}" action="#" method="post">
         <label for="tle">Title  </label>
