--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -22,7 +22,7 @@
             <p th:if="${#fields.hasErrors('passwordCheck')}" th:errors="*{passwordCheck}">Password Match Error</p>
         </div>
 
-        <input type="submit" class="btn btn-success" value="Signup"></input>
+        <input type="submit" class="btn btn-success" value="Signup"/>
     </form>
 </div>
 </body>
