--- a/src/main/resources/templates/booklist.html
+++ b/src/main/resources/templates/booklist.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.w3.org/1999/xhtml">
 <link type = "text/css" rel = "stylesheet" href ="/static/css/bootstrap.min.css" th:href = "@{css/bootstrap.min.css}"/>
 <head>
     <title>Booklist</title>
@@ -8,6 +8,14 @@
 <body>
 
 <h1>Books</h1>
+<div class="col-md-4">
+    <h3 th:inline="text">Welcome [[${#httpServletRequest.remoteUser}]]</h3>
+</div>
+<div class="col-md-4" style="padding:20px 0">
+    <form th:action="@{/logout}" method="post">
+        <input type="submit" value="Sign Out" class="btn btn-danger"/>
+    </form>
+</div>
 <table class="table table-striped" >
     <tr>
         <th>Title</th>
@@ -22,7 +30,7 @@
         <td th:text="${book.year}"></td>
         <td th:text="${book.price}"></td>
         <td th:text="${book.isbn}"></td>
-        <td><a th:href="@{/delete/{id}(id=${book.id})}" class="btn btn-danger">Delete</a></td>
+        <td sec:authorize="hasAuthority('ADMIN')"><a th:href="@{/delete/{id}(id=${book.id})}" class="btn btn-danger">Delete</a></td>
     </tr>
 </table>
 <a href="/add" class="btn btn-success">Add Book</a>
